<resources>
    <string name="app_name">WhatsApp</string>
    <string name="menu_novo_grupo">Novo grupo</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_desconectar">Desconectar</string>
    <string name="txt_name">Nome</string>
    <string name="txt_phone">Telefone</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_password">Senha</string>
    <string name="txt_create_account">Criar conta</string>

    <!--    Generics-->
    <string name="txt_save">Salvar</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="permission_denied">Permissão negada.</string>
    <string name="camera_permission_denied">Se você não aceitar a permissão não poderá acessar a Câmera do dispositivo, deseja ativar a permissão agora ?</string>
    <string name="gallery_permission_denied">Se você não aceitar a permissão não poderá acessar a Galeria do dispositivo, deseja ativar a permissão agora ?</string>
    <string name="camera_error">Ocorreu um erro na câmera, tente uma imagem da galeria do dispositivo.</string>

    <!--    Login Fragment-->
    <string name="txt_btn_login">Entrar</string>
    <string name="inform_your_password">Informe sua senha.</string>
    <string name="inform_your_email">Informe seu email.</string>

    <!--    Register Fragment-->
    <string name="title_toolbar_register_fragment">Criar conta</string>
    <string name="image_profile_empty_register_fragment">Escolha uma foto de perfil para sua conta.</string>
    <string name="error_upload_image_profile_register_fragment">Ocorreu um erro no upload, tente novamente mais tarde.</string>
    <string name="text_name_empty_register_fragment">Informe seu nome.</string>
    <string name="text_full_name_empty_register_fragment">Informe seu nome completo.</string>
    <string name="text_email_empty_register_fragment">Informe seu email.</string>
    <string name="text_password_empty_register_fragment">Informe uma senha.</string>
    <string name="text_phone_empty_register_fragment">Informe seu telefone.</string>
    <string name="sucess_user_register_register_fragment">Conta criada com sucesso!</string>
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <!--    Recover Password Fragment-->
    <string name="title_toolbar_recover_password_fragment">Recuperar conta</string>
    <string name="btn_recover_password_fragment">Enviar</string>
    <string name="text_recover_password_fragment">Pronto, já pode verificar seu e-mail.</string>

    <!--    Contacts Fragment-->
    <string name="title_toolbar_contacts_fragment">Contatos</string>
    <string name="text_info_contacts_fragment">Aguarde, estamos carregando os contatos...</string>
    <string name="list_empty_contacts_fragment">Nenhum contato cadastrado.</string>
    <string name="loading_contacts_fragment">carregando...</string>
    <string name="count_contacts_fragment">%1$s contatos</string>

    <!--    Talks Fragment-->
    <string name="talks_list_empty_talks_fragment">Você não possui nenhuma conversa.</string>

    <!--    Profile Fragment-->
    <string name="title_toolbar_perfil_fragment">Perfil</string>
    <string name="message_save_profile_perfil_fragment">"Salvando perfil..."</string>
    <string name="get_profile_perfil_fragment">"Recuperando perfil..."</string>
    <string name="text_name_empty_profile_fragment">Informe seu nome.</string>
    <string name="text_full_name_empty_profile_fragment">Informe seu nome completo.</string>
    <string name="text_phone_empty_profile_fragment">Informe seu telefone.</string>

    <!--    Chat Send Imagem Fragment-->
    <string name="message_save_image_fragment">Enviando imagem...</string>
    <string name="button_send_image_fragment">Enviar</string>

    <!--    Add Contact Fragment-->
    <string name="txt_btn_add_contact">Adicionar</string>
    <string name="txt_label_name">Nome</string>
    <string name="txt_label_number">Número</string>
    <string name="txt_hint_name">Digite o nome do contato</string>
    <string name="txt_hint_number">Digite o número do contato</string>

    <!--    Home Fragment-->
    <string name="search_hint">Pesquisar</string>
    <string name="title_tab_talks">CONVERSAS</string>
    <string name="title_tab_status">STATUS</string>
    <string name="title_tab_calls">CHAMADAS</string>

    <!--    Status Fragment-->
    <string name="text_title_meu_status">Meu status</string>
    <string name="text_sub_title_meu_status">Toque para atualizar seu status</string>
    <string name="save_image_status_fragment">Enviando para status...</string>
    <string name="loading_status_fragment">Carregando status...</string>

    <!--    Status Lists Fragment-->
    <string name="title_toolbar_status_list_fragment">Meu status</string>
    <string name="loading_delete_status_list_fragment">Apagando status...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>